--- a/content/commands/git/index.mdx
+++ b/content/commands/git/index.mdx
@@ -1,19 +1,7 @@
 ---
-title: Example Post
+title: git
 date: "2022-12-11"
-sort: 1
+sort: 5
 ---
 
-This is an example post.
-
-# Heading 1
-
-## Heading 2
-
-### Heading 3
-
-#### Heading 4
-
-##### Heading 5
-
-<C>This is a command</C>
+## Git
