ts literals error

--- a/content/code/typescript/literals.mdx
+++ b/content/code/typescript/literals.mdx
@@ -14,7 +14,8 @@ const func = (array: string[]) => {
 };
 
 func(options);
-// ^^^^^^^^^^ Ceci cause une erreur !
+// ^^^^^^^^^^ Error: Argument of type 'readonly ["a", "b", "c"]' is not assignable to 
+// parameter of type 'string[]'.
 ```
 
 ## Solution 1
