--- a/content/cli/git/oh-my-zsh.mdx
+++ b/content/cli/git/oh-my-zsh.mdx
@@ -8,4 +8,7 @@ Oh-My-Zsh comprend des raccourcis pour Git et permettent de taper la plupart des
 
 <C i={`gst`}>Racourci pour `git status`</C>
 
-[source](https://kapeli.com/cheat_sheets/Oh-My-Zsh_Git.docset/Contents/Resources/Documents/index)
+## Ressources
+
+- [source](https://kapeli.com/cheat_sheets/Oh-My-Zsh_Git.docset/Contents/Resources/Documents/index)
+- [Astuces Zsh - Les plugins Git de Oh My Zsh](https://www.synbioz.com/blog/tech/astuces-zsh-plugins-git-oh-my-zsh)
