--- a/content/cli/git/cherry-pick.mdx
+++ b/content/cli/git/cherry-pick.mdx
@@ -3,4 +3,8 @@ sort: 90
 title: cherry-pick
 ---
 
-git cherry-pick
+Cette commande permet de choisir un commit dans une branche et l'appliquer à une autre, créant un nouveau commit.
+
+<C i={`git cherry-pick <commit-hash>`}>
+  Initie un dépôt git dans le dossier courant.
+</C>
