New réseau folder

--- a/content/cli/lsof.mdx
+++ b/content/cli/lsof.mdx
@@ -1,8 +1,7 @@
 ---
 sort: 78
 title: lsof
-
-
+draft: true
 ---
 
 `lsof` est une commande qui permet de lister les fichiers actuellement ouverts sur le système.
