Réorg more folders

--- a/content/cli/editeurs/nano.mdx
+++ b/content/cli/editeurs/nano.mdx
@@ -1,11 +1,9 @@
 ---
 sort: 14
 title: nano
-
-
 ---
 
-La commande nano permet d’ouvrir un fichier dans un éditeur de texte basique.
+La commande nano permet d’ouvrir un fichier dans un éditeur de texte basique idéal pour les débutant
 
 <C i={`nano fichier.conf`}>Ouvre le fichier `fichier.conf` dans un éditeur de texte.</C>
 
