--- a/content/cli/git/index.mdx
+++ b/content/cli/git/index.mdx
@@ -23,7 +23,7 @@ Git est un logiciel de gestion de versions décentralisé créé par Linus Torva
 
 <C i={`git add .`}>
   Ajoute tous les fichiers dans la proposition de changements, sauf ceux
-  spécifiés dans le fichier .gitignore.{" "}
+  spécifiés dans le fichier `.gitignore`.
 </C>
 
 <C i={`git add -p`}>
