--- a/content/code/typescript/recettes.mdx
+++ b/content/code/typescript/recettes.mdx
@@ -7,7 +7,7 @@ title: Recettes
 
 Voici une erreur commune:
 
-```
+```bash
 Argument of type 'readonly ...' is not assignable to parameter of type '...[]'
 ```
 
