--- a/content/cli/cat.mdx
+++ b/content/cli/cat.mdx
@@ -1,28 +1,39 @@
 ---
 sort: 10
 title: cat
-
-
 ---
 
 La commande `cat` permet d'afficher le contenu entier d'un fichier dans la console.
 
-<C i={`cat monfichier.txt`}>Fait apparaître dans la console le contenu entier de `monfichier.txt`.</C>
+<C i={`cat monfichier.txt`}>
+  Fait apparaître dans la console le contenu entier de `monfichier.txt`.
+</C>
 
 <C i={`cat *.txt`}>Fait apparaître tous les fichiers `txt`.</C>
 
-<C i={`cat monfichier1.txt monfichier2.txt > union.txt`}>Concatène 2 fichiers.</C>
+<C i={`cat monfichier1.txt monfichier2.txt > union.txt`}>
+  Concatène 2 fichiers.
+</C>
 
-<C i={`head monfichier.txt`}>Affiche les 10 premières lignes du fichier `monfichier.txt`.</C>
+<C i={`head monfichier.txt`}>
+  Affiche les 10 premières lignes du fichier `monfichier.txt`.
+</C>
 
 <C i={`head -85 monfichier.txt`}>Affiche les 85 premières lignes du fichier.</C>
 
-<C i={`tail monfichier.txt`}>Affiche les 10 dernières lignes du fichier `monfichier.txt`.</C>
+<C i={`tail monfichier.txt`}>
+  Affiche les 10 dernières lignes du fichier `monfichier.txt`.
+</C>
 
-<C i={`tail -30 monfichier.txt`}>Affiche les 30 dernières lignes du fichier, très utile pour les logs.</C>
+<C i={`tail -30 monfichier.txt`}>
+  Affiche les 30 dernières lignes du fichier, très utile pour les logs.
+</C>
 
-<C i={`head -50 monfichier.txt | tail -10`}>Affiche les lignes 40 à 50 du fichier.</C>
+<C i={`head -50 monfichier.txt | tail -10`}>
+  Affiche les lignes 40 à 50 du fichier.
+</C>
 
-<C i={`clear`}>Nettoye la console, ou plus rapide avec le raccourci clavier `touche Control` + `touche L`.</C>
-
-
+<C i={`clear`}>
+  Nettoye la console, ou plus rapide avec le raccourci clavier `touche Control`
+  + `touche L`.
+</C>
