--- a/content/cli/cd.mdx
+++ b/content/cli/cd.mdx
@@ -1,8 +1,6 @@
 ---
 sort: 4
 title: cd
-
-
 ---
 
 La navigation d’un répertoire à un autre s’effectue avec la commande `cd` succédée du nom du répertoire.
@@ -13,10 +11,13 @@ La navigation d’un répertoire à un autre s’effectue avec la commande `cd` 
 
 <C i={`cd /var/www/`}>Aller dans le répertoire `/var/www`.</C>
 
-<C i={`cd ..`}>Remonter dans le répertoire parent à partir de là où vous êtes.</C>
+<C i={`cd ..`}>
+  Remonter dans le répertoire parent à partir de là où vous êtes.
+</C>
 
 <C i={`cd -`}>Permet de revenir au répertoire précédent.</C>
 
-<C i={`pwd`}>Renvoyer le chemin absolu du répertoire courant ce qui est utile puisqu’en général le shell n’affiche que le nom du répertoire courant.</C>
-
-
+<C i={`pwd`}>
+  Renvoyer le chemin absolu du répertoire courant ce qui est utile puisqu’en
+  général le shell n’affiche que le nom du répertoire courant.
+</C>
