--- a/content/cli/cp.mdx
+++ b/content/cli/cp.mdx
@@ -1,14 +1,14 @@
 ---
 sort: 5
 title: cp
-
-
 ---
 
 Pour créer une copie d’un fichier, on utilise la commande `cp`.
 
-<C i={`cp foo/bar.txt baz/`}>Copier le fichier `bar.txt` dans le répertoire `baz`.</C>
+<C i={`cp foo/bar.txt baz/`}>
+  Copier le fichier `bar.txt` dans le répertoire `baz`.
+</C>
 
-<C i={`cp -r foo/ baz/`}>Copier des répertoires entiers (note : si baz existe, la cible sera baz/foo/).</C>
-
-
+<C i={`cp -r foo/ baz/`}>
+  Copier des répertoires entiers (note : si baz existe, la cible sera baz/foo/).
+</C>
