--- a/content/cli/df.mdx
+++ b/content/cli/df.mdx
@@ -1,18 +1,19 @@
 ---
 sort: 38
 title: df
-
-
 ---
 
 La commande `df` nous donne les informations sur le poids du système.
 
-<C i={`df`}>Renvoie la taille des différentes partitions du système, l'espace libre restant et le point de montage.</C>
+<C i={`df`}>
+  Renvoie la taille des différentes partitions du système, l'espace libre
+  restant et le point de montage.
+</C>
 
 <C i={`df /home`}>Idem mais pour le dossier Home.</C>
 
 <C i={`df -h /home`}>Renvoie une taille plus lisible en Ko, Mo, Go, etc...</C>
 
-<C i={`du home`}>Renvoie tous les fichiers du dossier `/home` et leur poids. </C>
-
-
+<C i={`du home`}>
+  Renvoie tous les fichiers du dossier `/home` et leur poids.{" "}
+</C>
