--- a/content/cli/ln.mdx
+++ b/content/cli/ln.mdx
@@ -1,12 +1,10 @@
 ---
 sort: 24
 title: ln
-
-
 ---
 
 C'est la commande pour créer des symlinks ou liens symbolique. L'avantage par rapport au raccourci Windows est qu'il est actif, si le fichier de destination est mis à jour, le lien symbolique le sera aussi.
 
-<C i={`ln -s [fichier ou dossier de destination] [Nom du symlink]`}>Crée un symlink.</C>
-
-
+<C i={`ln -s [fichier ou dossier de destination] [Nom du symlink]`}>
+  Crée un symlink.
+</C>
