--- a/content/cli/ls.mdx
+++ b/content/cli/ls.mdx
@@ -1,8 +1,6 @@
 ---
 sort: 3
 title: ls
-
-
 ---
 
 La commande `ls` permet d'afficher le contenu d'un répertoire.
@@ -21,8 +19,9 @@ La commande `ls` permet d'afficher le contenu d'un répertoire.
 
 <C i={`ls -la`}>Afficher tous les fichiers y compris les fichiers cachés.</C>
 
-<C i={`ls -lhS`}>Afficher les informations des fichiers, avec des tailles lisibles le tout ordonné du plus grand au plus petit.</C>
+<C i={`ls -lhS`}>
+  Afficher les informations des fichiers, avec des tailles lisibles le tout
+  ordonné du plus grand au plus petit.
+</C>
 
 <C i={`ls /tmp`}>Afficher les informations des fichiers du dossier tmp.</C>
-
-
