--- a/content/cli/man.mdx
+++ b/content/cli/man.mdx
@@ -1,8 +1,6 @@
 ---
 sort: 2
 title: man
-
-
 ---
 
 La commande `man` permet d'afficher la documentation relative à une commande.
@@ -11,6 +9,7 @@ La commande `man` permet d'afficher la documentation relative à une commande.
 
 <C i={`man -u`}>Rafraîchie la base de donnée du man.</C>
 
-<C i={`man -f`}>Affiche, si elle est disponible, une courte description de la page de manuel de la commande.</C>
-
-
+<C i={`man -f`}>
+  Affiche, si elle est disponible, une courte description de la page de manuel
+  de la commande.
+</C>
