--- a/content/cli/serveurs-web/index.mdx
+++ b/content/cli/serveurs-web/index.mdx
@@ -1,7 +1,7 @@
 ---
 sort: 51
-title: Serveurs HTTP
-nav: serveurs-http
+title: Serveurs Web
+nav: serveurs-web
 ---
 
 Voici une liste non exhaustive des serveurs et autres services les plus connus.
