--- a/content/cli/sudo.mdx
+++ b/content/cli/sudo.mdx
@@ -1,14 +1,16 @@
 ---
 sort: 36
 title: sudo
-
-
 ---
 
-La commande `sudo` permet une élévation de droit grâce au groupe `sudoers`. 
+La commande `sudo` permet une élévation de droit grâce au groupe `sudoers`.
 
-<C i={`adduser alex sudo`}>Ajoute l'utilisateur alex au groupe Sudoers permettant d'éxecuter de commandes root en préfixant les commandes avec `sudo [command]`</C>
+<C i={`adduser alex sudo`}>
+  Ajoute l'utilisateur alex au groupe Sudoers permettant d'éxecuter de commandes
+  root en préfixant les commandes avec `sudo [command]`
+</C>
 
-<C i={`sudo !!`}>Exécute la dernière commande effectuée en la préfixant de sudo. Utile en cas d'échec d'une commande nécessitant des privilèges.</C>
-
-
+<C i={`sudo !!`}>
+  Exécute la dernière commande effectuée en la préfixant de sudo. Utile en cas
+  d'échec d'une commande nécessitant des privilèges.
+</C>
