--- a/content/cli/tar.mdx
+++ b/content/cli/tar.mdx
@@ -1,8 +1,6 @@
 ---
 sort: 23
 title: tar
-
-
 ---
 
 Que ce soit pour compresser ou décompresser des fichiers ou des dossiers, cela se fait avec la commande `tar`.
@@ -21,20 +19,30 @@ Que ce soit pour compresser ou décompresser des fichiers ou des dossiers, cela 
 
 <C i={`tar -f`}>Permet de spécifier le fichier à traiter</C>
 
-<C i={`tar -cvf archive.tar fichier1`}>Création d’une archive nommée archive.tar contenant le fichier `fichier1`.</C>
+<C i={`tar -cvf archive.tar fichier1`}>
+  Création d’une archive nommée archive.tar contenant le fichier `fichier1`.
+</C>
 
-<C i={`tar -cvf archive.tar fichier1 fichier2`}>Création d’une archive contenant deux fichiers `fichier1` et `fichier2`.</C>
+<C i={`tar -cvf archive.tar fichier1 fichier2`}>
+  Création d’une archive contenant deux fichiers `fichier1` et `fichier2`.
+</C>
 
-<C i={`tar -cvf archive.tar repertoire/`}>Création d’une archive à partir d’un répertoire.</C>
+<C i={`tar -cvf archive.tar repertoire/`}>
+  Création d’une archive à partir d’un répertoire.
+</C>
 
-<C i={`tar -czvf archive.tar.gz repertoire/`}>Création d’une archive au format `tar.gz`.</C>
+<C i={`tar -czvf archive.tar.gz repertoire/`}>
+  Création d’une archive au format `tar.gz`.
+</C>
 
-<C i={`tar -cjvf archive.tar.bz2 repertoire/`}>Création d’une archive au format `tar.bz2`.</C>
+<C i={`tar -cjvf archive.tar.bz2 repertoire/`}>
+  Création d’une archive au format `tar.bz2`.
+</C>
 
 <C i={`tar -xzvf archive.tar.gz`}>Extraction de l’archive `tar.gz`.</C>
 
 <C i={`tar -xjvf archive.tar.bz2`}>Extraction de l’archive `tar.bz2`.</C>
 
-<C i={`tar -tf mon_fichier.tar`}>Liste tous les fichiers contenus dans une archive.</C>
-
-
+<C i={`tar -tf mon_fichier.tar`}>
+  Liste tous les fichiers contenus dans une archive.
+</C>
