--- a/content/cli/test.mdx
+++ b/content/cli/test.mdx
@@ -1,8 +1,6 @@
 ---
 sort: 20
 title: test
-
-
 ---
 
 La commande `test` permet de comparer des chaines de caractères, des nombres et vérifier certaines propriétés de fichiers. Il est possible de simplifier son écriture en la remplaçant par des crochets [ ].
@@ -15,8 +13,10 @@ La commande `test` permet de comparer des chaines de caractères, des nombres et
 
 <C i={`test -x foo.txt`}>Tester si le fichier est exécutable.</C>
 
-<C i={`[ "string1" != "string2" ]`}>Vérifier que la chaine `string1` n'est pas égale à `string2`.</C>
+<C i={`[ "string1" != "string2" ]`}>
+  Vérifier que la chaine `string1` n'est pas égale à `string2`.
+</C>
 
-<C i={`[ int1 != int2 ]`}>Vérifier que le nombre `int1` est inférieur à `int2`.</C>
-
-
+<C i={`[ int1 != int2 ]`}>
+  Vérifier que le nombre `int1` est inférieur à `int2`.
+</C>
