--- a/content/cli/chgrp.mdx
+++ b/content/cli/chgrp.mdx
@@ -1,12 +1,10 @@
 ---
 sort: 12
 title: chgrp
-
-
 ---
 
 Permet de changer le groupe d'un fichier ou d'un répertoire. L'option `-R` permet de l'exécuter de manière récursive.
 
-<C i={`chgrp amis fichier1`}>Change le groupe de `fichier1` pour celui nommé `amis`.</C>
-
-
+<C i={`chgrp amis fichier1`}>
+  Change le groupe de `fichier1` pour celui nommé `amis`.
+</C>
