--- a/content/cli/groups.mdx
+++ b/content/cli/groups.mdx
@@ -1,8 +1,6 @@
 ---
 sort: 33
 title: groups
-
-
 ---
 
 Relatif à la gestion des groupes.
@@ -13,12 +11,16 @@ Relatif à la gestion des groupes.
 
 <C i={`groupadd students`}>Permet de créer le groupe dénommé `students`.</C>
 
-<C i={`groupadd -g 1000 students`}>Permet de spécifier le `Group ID (GID)` pour la création du group `students`.</C>
+<C i={`groupadd -g 1000 students`}>
+  Permet de spécifier le `Group ID (GID)` pour la création du group `students`.
+</C>
 
-<C i={`gpasswd students`}>Protéger le groupe `students` avec un mot de passe.</C>
+<C i={`gpasswd students`}>
+  Protéger le groupe `students` avec un mot de passe.
+</C>
 
 <C i={`groupdel students`}>Supprime le groupe `students`.</C>
 
-<C i={`groupmod -g 1001 -n ecoliers students`}>Permet de changer le `PID` et le nom du groupe `students`.</C>
-
-
+<C i={`groupmod -g 1001 -n ecoliers students`}>
+  Permet de changer le `PID` et le nom du groupe `students`.
+</C>
