--- a/content/cli/mkdir.mdx
+++ b/content/cli/mkdir.mdx
@@ -1,13 +1,13 @@
 ---
 sort: 8
 title: mkdir
-
-
 ---
 
 Pour créer un répertoire, il suffit d’utiliser la commande `mkdir`. Celle-ci vous permettra de créer un répertoire à l’emplacement où vous êtes ou l’emplacement précisé en argument de la commande.
 
-<C i={`mkdir -v`}>Retourner des informations lors de la création d'un répertoire.</C>
+<C i={`mkdir -v`}>
+  Retourner des informations lors de la création d'un répertoire.
+</C>
 
 <C i={`mkdir -p`}>Cette option permet de créer une arborescence complète.</C>
 
@@ -18,5 +18,3 @@ Pour créer un répertoire, il suffit d’utiliser la commande `mkdir`. Celle-ci
 <C i={`mkdir -p foo/bar/baz`}>Crée l’arborescence `foo/bar/baz`.</C>
 
 <C i={`mktemp`}>Crée un dossier temporaire.</C>
-
-
