--- a/content/cli/serveurs-web/caddy.mdx
+++ b/content/cli/serveurs-web/caddy.mdx
@@ -2,11 +2,10 @@
 sort: 51
 title: Caddy
 nav: caddy
-
 ---
 
 Caddy 2 est un serveur web open source puissant et prêt pour la production, avec une obtention automatique de certificats HTTPS. Il est écrit en Go.
 
-<C i={`caddy run`}>Démarre Caddy en tant que service mais ne rend pas la main sur le terminal.</C>
-
-
+<C i={`caddy run`}>
+  Démarre Caddy en tant que service mais ne rend pas la main sur le terminal.
+</C>
