--- a/content/cli/systemctl.mdx
+++ b/content/cli/systemctl.mdx
@@ -1,8 +1,6 @@
 ---
 sort: 25
 title: systemctl
-
-
 ---
 
 Cette commande permet de gérer les services et procéssus en arrière plan ou daemon. Elle remplace les commandes `service`, `chkconfig` ou encore `init`.
@@ -17,16 +15,27 @@ Cette commande permet de gérer les services et procéssus en arrière plan ou d
 
 <C i={`systemctl enable $daemon`}>Active le service au démarrage du système.</C>
 
-<C i={`systemctl disable $daemon`}>Efface le service au démarrage du système.</C>
+<C i={`systemctl disable $daemon`}>
+  Efface le service au démarrage du système.
+</C>
 
-<C i={`systemctl is-enabled $daemon`}>Permet de voir si le service est actif au démarrage du système.</C>
+<C i={`systemctl is-enabled $daemon`}>
+  Permet de voir si le service est actif au démarrage du système.
+</C>
 
-<C i={`systemctl list-units --type=service --all`}>Permet de voir la liste des services et s'ils sont actifs au démarrage du système.</C>
+<C i={`systemctl list-units --type=service --all`}>
+  Permet de voir la liste des services et s'ils sont actifs au démarrage du
+  système.
+</C>
 
-<C i={`systemctl is-failed $daemon`}>Retourne la valeur active si le service fonctionne sinon failed.</C>
+<C i={`systemctl is-failed $daemon`}>
+  Retourne la valeur active si le service fonctionne sinon failed.
+</C>
 
-<C i={`systemctl list-units [--all] [--state=inactive] [--type=service]`}>Liste toutes les unités gérées par systemctl.</C>
+<C i={`systemctl list-units [--all] [--state=inactive] [--type=service]`}>
+  Liste toutes les unités gérées par systemctl.
+</C>
 
-<C i={`conteneur[service[$daemon][action]]`}>Dans un conteneur docker, le service systemctl n'est pas implémenté.</C>
-
-
+<C i={`conteneur[service[$daemon][action]]`}>
+  Dans un conteneur docker, le service systemctl n'est pas implémenté.
+</C>
