--- a/content/cli/ftp.mdx
+++ b/content/cli/ftp.mdx
@@ -1,6 +1,7 @@
 ---
 sort: 73
 title: ftp
+draft: true
 ---
 
 File Transfer Protocol (protocole de transfert de fichier), ou FTP, est un protocole de communication destiné au partage de fichiers sur un réseau TCP/IP. Il permet, depuis un ordinateur, de copier des fichiers vers un autre ordinateur du réseau, ou encore de supprimer ou de modifier des fichiers sur cet ordinateur
