--- a/content/cli/ufw.mdx
+++ b/content/cli/ufw.mdx
@@ -4,7 +4,7 @@ title: Uncomplicated Firewall
 nav: ufw
 ---
 
-Uncomplicated Firewall `ufw` est un programme pour gérer le pare-feu netfilter. UFW utilise une interface en ligne de commande avec des commandes simples pour configurer `iptables`. Toutes les commandes sont à lancer en sudo ou root !
+`ufw` est un programme pour gérer le pare-feu netfilter. UFW utilise une interface en ligne de commande avec des commandes simples pour configurer `iptables`. Toutes les commandes sont à lancer en sudo ou root !
 
 <C i={`ufw --help`} env={`#`}>
   Affiche une aide.
