--- a/content/code/typescript/recettes.mdx
+++ b/content/code/typescript/recettes.mdx
@@ -3,7 +3,7 @@ sort: 1
 title: Recettes
 ---
 
-## Passer une tableau de literals en argument d'un function.
+## Passer un tableau de literals à la place d'un tableau de chaînes.
 
 Voici une erreur commune:
 
