git shrink source

--- a/content/cli/git/revert.mdx
+++ b/content/cli/git/revert.mdx
@@ -9,3 +9,7 @@ Git revert permet d'annuler des commits en créant un nouveau commit avec les ch
 <C i={`git revert HEAD`}>
   Permet d'effecter un *undo* sur le dernier commit.
 </C>
+
+## sources
+
+- [Atlassian git revert](https://www.atlassian.com/git/tutorials/undoing-changes/git-revert)
