--- a/content/cli/git/revert.mdx
+++ b/content/cli/git/revert.mdx
@@ -13,3 +13,4 @@ Git revert permet d'annuler des commits en créant un nouveau commit avec les ch
 ## sources
 
 - [Atlassian git revert](https://www.atlassian.com/git/tutorials/undoing-changes/git-revert)
+- [Freecodecamp git revert](https://www.freecodecamp.org/news/git-revert-commit-how-to-undo-the-last-commit/)
