Removed code inside title

--- a/content/code/javascript/recettes.mdx
+++ b/content/code/javascript/recettes.mdx
@@ -3,7 +3,7 @@ sort: 99
 title: Recettes
 ---
 
-## Ne pas utiliser de boucle `foreach` avec les promesses.
+## Ne pas utiliser de boucle foreach avec les promesses.
 
 A ne jamais faire !
 
