Added git zsh shorcut

--- a/content/cli/git/oh-my-zsh.mdx
+++ b/content/cli/git/oh-my-zsh.mdx
@@ -7,8 +7,10 @@ sort: 90
 Oh-My-Zsh comprend des raccourcis pour Git et permettent de taper la plupart des commandes en seulement quelques charactères.
 
 <C i={`gst`}>Racourci pour `git status`</C>
+<C i={`gcb ma-branche`}>Racourci pour `git checkout -b ma-branche`</C>
 
 ## Ressources
 
 - [source](https://kapeli.com/cheat_sheets/Oh-My-Zsh_Git.docset/Contents/Resources/Documents/index)
 - [Astuces Zsh - Les plugins Git de Oh My Zsh](https://www.synbioz.com/blog/tech/astuces-zsh-plugins-git-oh-my-zsh)
+
