--- a/content/cli/git/oh-my-zsh.mdx
+++ b/content/cli/git/oh-my-zsh.mdx
@@ -6,8 +6,8 @@ sort: 90
 
 Oh-My-Zsh comprend des raccourcis pour Git et permettent de taper la plupart des commandes en seulement quelques charactères.
 
-<C i={`gst`}>Racourci pour `git status`</C>
-<C i={`gcb ma-branche`}>Racourci pour `git checkout -b ma-branche`</C>
+<C i={`gst`}>Raccourci pour `git status`</C>
+<C i={`gcb ma-branche`}>Raccourci pour `git checkout -b ma-branche`</C>
 
 ## Ressources
 
