more git zsh shortcut

--- a/content/cli/git/oh-my-zsh.mdx
+++ b/content/cli/git/oh-my-zsh.mdx
@@ -8,9 +8,10 @@ Oh-My-Zsh comprend des raccourcis pour Git et permettent de taper la plupart des
 
 <C i={`gst`}>Raccourci pour `git status`</C>
 <C i={`gcb ma-branche`}>Raccourci pour `git checkout -b ma-branche`</C>
+<C i={`gp`}>Raccourci pour `git push`</C>
+<C i={`gl`}>Raccourci pour `git pull`</C>
 
 ## Ressources
 
 - [source](https://kapeli.com/cheat_sheets/Oh-My-Zsh_Git.docset/Contents/Resources/Documents/index)
 - [Astuces Zsh - Les plugins Git de Oh My Zsh](https://www.synbioz.com/blog/tech/astuces-zsh-plugins-git-oh-my-zsh)
-
