--- a/content/code/rust/index.mdx
+++ b/content/code/rust/index.mdx
@@ -3,3 +3,17 @@ sort: 50
 title: Rust
 nav: rust
 ---
+
+## Pourquoi Rust ?
+
+### Performance
+
+Rust est terriblement rapide et économe en mémoire : sans environnement d'exécution, ni ramasse-miettes, il peut dynamiser des services à hautes performances, s'exécuter dans des systèmes embarqués, et s'intégrer facilement à d'autres langages.
+
+### Fiabilité
+
+Le puissant système de typage et le modèle d’ownership de Rust garantissent la sécurité mémoire ainsi que la sécurité des threads — et vous permettent d'éliminer de nombreuses variétés de bugs dès la compilation.
+
+### Productivité
+
+Rust dispose d'une excellente documentation, d'un compilateur bienveillant, avec des messages d'erreur utiles, et d'outils de premier ordre — un gestionnaire de paquet et de compilation intégré, divers éditeurs intelligents avec auto-complétion et analyse de type, un outil de mise en forme automatique et plus encore.
