--- a/content/code/rust/installation.mdx
+++ b/content/code/rust/installation.mdx
@@ -24,7 +24,7 @@ Vous devriez voir le numéro de version, le hash de validation et la date de val
 
 Si vous voyez ces informations, vous avez installé Rust avec succès ! Si vous ne voyez pas ces informations, vérifiez que Rust se trouve dans votre variable système %PATH% comme suit.
 
-<C i={`echo $PATH`}>Affiche la variable `$PATH`.</C>
+<C i={`echo $PATH`}></C>
 
 Si tout est correct et que Rust ne fonctionne toujours pas, il existe un certain nombre d'endroits où vous pouvez obtenir de l'aide. Découvrez comment entrer en contact avec d'autres Rustacés (un surnom idiot que nous appelons nous-mêmes) sur (la page de la communauté)[https://www.rust-lang.org/community].
 
