Fixed heading on rust

--- a/content/code/rust/installation.mdx
+++ b/content/code/rust/installation.mdx
@@ -4,7 +4,7 @@ title: Installer Rust
 nav: installation
 ---
 
-# Installer Rust sur Linux ou MacOs
+## Installer Rust sur Linux ou MacOs
 
 <C i={`curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf | sh`}>
   Installe Rust sur Linux ou MacOS
@@ -16,7 +16,7 @@ nav: installation
 
 Les utilisateurs de Linux doivent généralement installer GCC ou Clang, selon la documentation de leur distribution. Par exemple, si vous utilisez Ubuntu, vous pouvez installer le package `build-essential`.
 
-## Dépannage
+### Dépannage
 
 <C i={`rustc --version`}>Pour vérifier si Rust est correctement installé.</C>
 
